--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/kiduss.jpg" class="img-fluid" alt="">
+            <img src="assets/img/kid1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Graphics &amp;  Web designer.</h2>
