--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ High-resolution, print-ready visuals for professional use</p>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                  <button type="submit" action="mailto:kiduadavid00@gmail.com">Send Message</button>
+                <a href="mailto:kiduadavid00@gmail.com">  <button type="submit">Send Message</button> </a>
                 </div>
 
               </div>
