--- a/index.html
+++ b/index.html
@@ -746,8 +746,8 @@ High-resolution, print-ready visuals for professional use</p>
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
+          <!--  <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <div class="row gy-4">-->
 
                 <div class="col-md-6">
                   <label for="name-field" class="pb-2">Your Name</label>
